Fixing bug 236270. Protect the content iterators from broken selection code that creates ranges starting in 'real' dom nodes, and ending in anonymous dom nodes. r+sr=bzbarsky@mit.edu